Soap 2 publisher