@@ -8,7 +8,7 @@ public class Agence {
     private final double reduction; // ex: 0.10 = -10%
 
     public Agence(String nom, double reduction) {
-        if (nom == null || nom.isBlank()) throw new IllegalArgumentException("Nom d'agence requis");
+        if (nom == null || nom.trim().isEmpty()) throw new IllegalArgumentException("Nom d'agence requis");
         if (reduction < 0.0 || reduction > 1.0) throw new IllegalArgumentException("Réduction doit être entre 0.0 et 1.0");
         this.nom = nom.trim();
         this.reduction = reduction;
